# ESP32-S3-DevKitC-1

./: .gitignore  AI 开发功能说明.txt  CMakeLists.txt  README.md  build_output.txt  cleanup.py  log.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  setup-mcp-simple.ps1  setup-mcp.ps1  test_sequence.ps1  trae-mcp-config.json
main/: CMakeLists.txt  api_controller.c  config.c  config.h  hardware_timer.c  hardware_timer.h  led.c  led.h  main.c  monitor.c  monitor.h  ntp_client.c  ntp_client.h  ntp_server.c  ntp_server.h  ntp_storage.c  nvs_manager.c  printer.c  printer.h  sensors.c  sensors.h  tcp_server.c  tcp_server.h  web_hook.c  web_hook.h  web_resources.c  web_server.c  web_server.h  wifi.c  wifi.h
main/include/: api_controller.h  common_defs.h  ntp_storage.h  nvs_manager.h  temp_sensor.h  web_resources.h
main/web/: index.html  monitor.html  sensors.html  usb.html  webhook.html  wifi.html
main/web/css/: style.css
main/web/js/: app.js
